# samudra

./: .env  .gitignore  .pre-commit-config.yaml  .pre-commit.yaml  404.html  Cargo.toml  Dockerfile  README.md  conf.toml  docs_from_source.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-docs.txt  requirements.txt  sitemap.xml
.sqlx/: query-13acbccfb0ceef61222bfbb58908780f4213c9e7a51ac6e285376efe055ea074.json  query-1b6acb82ad6af9a7ee8b5f45f1686026bc942689df50d8574cd71981650f5fc2.json  query-1bea0844783c7d93b18e3f1f8166669b41239739c3d969d884a3a0be5e707cce.json  query-2021808ab1884a460b4bdf4ea5d2100218c11b4e8d117bdab5ed9673ea643796.json  query-24d680cc15d5487198a892c87d440ac717cb3c02a0b84a9b286ba404d6b5e9c5.json  query-29e1f591dcf8ce0f88d1a5fd6ff498b703be6f11cba2747ac0a33067294ef0e6.json  query-2e30d4e058a7e9a13e152808d3dd476f2d1b0fa23c4b431ccbf6e0f950babf15.json  query-432f56a83c75bf7c5876e94076726d055f761a2ba343127f09f0dad03833b039.json  query-45545bcae9c395148b81d0ed12be6f2de440cc332afa4450115449b857d4aa86.json  query-59180341068a29e715bcf5ccff0bf878b40c8ff8d60c209bd095bb019b7a9918.json  query-5ebf93b500d8e556c1c17ff9d116f55603ceb88d2eed8bfc0faf6032d5650ad8.json  query-6d4c76470584eb9e56d31fd7d0492f5e288b05cb817fb57c52cc503a64aa919c.json  (+2 more)
database/: Cargo.toml
database/.sqlx/: query-0236514903b7f2314b3d06b0c986d9a17bacba9fba1c172ade278db5cd3d6f01.json  query-0e1edfe5358d0b9df04ab48cf19bffde6147992ec2937f0233d2dfdce35cf237.json  query-0fe638bf904e5737844fe3b8d1bea8e16fd06a51856a81a6d97ec77f1346c298.json  query-1115bfc2f45439fa1b1be5e9fbe356c15516bc69b9a21be2d68fc51d6c6b31fd.json  query-35291fe19875f4327bf284b54eefd35a4fd0f29ce00ece75a3c5323effeccf28.json  query-3fe1be43ed84e63df6508c8f61f6af1f33ed644ca52d9343c219c6f4b5a9b4f5.json  query-573ed76504b7c7684eb060501d9d36f08a2b58fca25bf9e7c7014b12b94d255e.json  query-65b190f3905a21c4a5195c616551091c90bf001ddf0e30cd4e3c8e74ec1d95b6.json  query-9f758d0db0713c195ed479b9889c1e6fc2a08a05c3ef2c4d31924b8710f800e0.json  query-ab0ba4618abf63f302566b0e8d635cf467200035ef169aab47bc8fc9721436b1.json  query-afa68dd73a027f75526648eade6874e632900ca6a978e2da33201f0ad176a826.json  query-afa6d3ea58472137354d419ddae6d145efaad497798389c7042523f6e1314f7d.json  query-cb0be08d130635f6cdb9cb6745add62007e4c6c6e94f649cb7ce3a7e90bf34bf.json  query-f06fe087e844aa960ffdca784530d47a20dfb3c4f2fffb98f2e788e4f68a9dad.json
database/migrations/: 20230719110454_create_kata_asing.down.sql  20230719110454_create_kata_asing.up.sql
database/migrations/postgres/: 20240714102556_create_lemma.down.sql  20240714102556_create_lemma.up.sql  20240714103819_create_konsep.down.sql  20240714103819_create_konsep.up.sql  20240714104750_create_cakupan.down.sql  20240714104750_create_cakupan.up.sql  20240714110454_create_kata_asing.down.sql  20240714110454_create_kata_asing.up.sql
database/migrations/sqlite/: 20230719102556_create_lemma.up.sql  20230719103819_create_konsep.up.sql  20230719104750_create_cakupan.down.sql  20230719104750_create_cakupan.up.sql  20231216033438_konsep_on_cascade_delete.down.sql  20231216033438_konsep_on_cascade_delete.up.sql  20240202025433_cakupan_set_unique.down.sql  20240202025433_cakupan_set_unique.up.sql  20240926073924_konsep_unique_constraint.down.sql  20240926073924_konsep_unique_constraint.up.sql
database/presets/: golongan_kata_ms-my.sql
database/src/: changes.rs  data.rs  engine.rs  errors.rs  io.rs  lib.rs  models.rs  operations.rs  states.rs  types.rs  views.rs
database/src/data/: items.rs
database/src/data/items/: cakupan.rs  kata_asing.rs  konsep.rs  lemma.rs
database/src/fixtures/: defaults.sql  lemma.sql  lemma_2.sql  lemma_w_2_konseps.sql
database/src/io/: interface.rs
database/src/items/: cakupan.rs  kata_asing.rs  konsep.rs  lemma.rs
database/transactions/: count_items.sql  delete_lemma.sql  select_lemma_with_konsep_view.sql
database/transactions/postgres/: count_items.sql
docs/: gui.md  index.md  model.md  (+2 more)
(+148 files in other folders)
