[tool.poetry]
name = "samudra"
version = "0.3.5"
description = ""
authors = ["Thaza_Kun <61819672+Thaza-Kun@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
peewee = "^3.15.0"
pytomlpp = "^1.0.11"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
pydantic = "^1.9.1"
pandas = "^1.4.3"
openpyxl = "^3.0.10"
python-dotenv = "^0.20.0"
psycopg2 = {version = "^2.9.3", optional = true, extras = ["cockroach_db"]}
cryptography = {version = "^37.0.4", optional = true, extras = ["cockroach_db", "mysql"]}
PyMySQL = {version = "^1.0.2", optional = true, extras = ["mysql"]}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
