[tool.poetry]
name = "samudra"
version = "0.8.0"
description = ""
authors = ["Thaza_Kun <61819672+Thaza-Kun@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytomlpp = "^1.0.11"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
pydantic = "^1.9.1"
pandas = "^1.4.3"
openpyxl = "^3.0.10"
python-dotenv = "^0.20.0"
psycopg2 = { version = "^2.9.3", optional = true }
cryptography = { version = "^37.0.4", optional = true }
PyMySQL = { version = "^1.0.2", optional = true }
passlib = "^1.7.4"
pycryptodome = "^3.15.0"
python-jose = "^3.3.0"
bcrypt = "^3.2.2"
python-multipart = "^0.0.5"
peewee = "^3.15.1"
requests = "^2.28.1"
typer = "^0.6.1"
rich = "^12.6.0"

[tool.poetry.extras]
mysql = ["cryptography", "PyMySQL"]
cockroach_db = ["psycopg2", "cryptography"]

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
pre-commit = "^2.20.0"
pylint = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
