[package]
name = "database"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
chrono = { version = "0.4.26", features = ["serde"] }
csv = "1.2.2"
itertools = "0.11.0"
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "chrono", "macros", "migrate"] }
tracing = "0.1.40"
ts-rs = "6.2.1"

[features]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]

[dev-dependencies]
tokio-test = "0.4.3"
tracing-test = "0.2.4"
