[package]
name = "database"
version = "0.6.0"
edition = "2021"


[dependencies]
schema = { path = "../schema" }
serde = { workspace = true }
itertools = { workspace = true }
sqlx = { workspace = true }
async-trait = "0.1.74"
tracing = "0.1.40"

[features]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]

[dev-dependencies]
tokio-test = "0.4.3"
tracing-test = "0.2.4"
serde_json = "1.0.108"
sqlx = { workspace = true, features = ["migrate", "runtime-tokio-rustls"] }
